--- a/Portafolio/src/App.css
+++ b/Portafolio/src/App.css
@@ -1,6 +1,6 @@
 :root {
- --blanco : #fff;
- --black : #000;
+  --blanco: #fff;
+  --black: #000;
 }
 
 * {
@@ -40,8 +40,8 @@
 }
 
 .nav_logo img {
-  height: 50px;
-  width: 50px;
+  height: 70px;
+  width: 70px;
   border-radius: 50%;
   zoom: 1.5;
 }
@@ -77,8 +77,8 @@
   color: var(--primer-color);
 }
 
-.nav_redes button{
- background: transparent;
+.nav_redes button {
+  background: transparent;
   color: var(--primer-color);
   font-size: 2.5rem;
   border: none;
@@ -86,9 +86,9 @@
 }
 
 .nav_redes button:hover {
- zoom: 1.2;
+  zoom: 1.2;
 }
- 
+
 .nav_redes .redes {
   color: var(--primer-color);
 }
@@ -129,6 +129,212 @@
   transform: scaleX(1);
 }
 
+.home {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  width: 1200px;
+  margin: 0 auto;
+  gap: 50px;
+}
 
+.home_container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
 
+.home_description {
+  font-size: 1.8rem;
+  color: var(--black);
+  font-weight: bold;
+
+}
+
+.home_title {
+  font-size: 5rem;
+  color: var(--black);
+  font-weight: 700;
+  margin-bottom: 20px;
+}
+
+.home_title span {
+  color: red;
+}
+
+.home_img img {
+  width: 300px;
+  height: 300px;
+  border-radius: 50%;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.aboutme {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 1200px;
+  margin: 0 auto;
+  height: 100vh;
+}
+
+.aboutme_container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.aboutme_title {
+  font-size: 5rem;
+  color: var(--black);
+  font-weight: 700;
+  margin-bottom: 20px;
+}
+
+.aboutme-description {
+  font-size: 1.5rem;
+  color: var(--black);
+  max-width: 800px;
+}
+
+.skills {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 1200px;
+  margin: 0 auto;
+  height: 100vh;
+
+}
+
+.skills_container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  width: 100%;
+  height: 80%;
+
+}
+
+.skills_title {
+  font-size: 5rem;
+  color: var(--black);
+  font-weight: 700;
+  margin-bottom: 20px;
+}
+
+.skills-description {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.5rem;
+  color: var(--black);
+  width: 1200px;
+
+  height: 100%;
+  border-radius: 20px;
+}
+
+.skills-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  font-size: 1.5rem;
+  color: var(--black);
+  width: calc(100% / 3);
+  height: 100%;
+
+}
+
+.skills-list .title {
+  width: 100%;
+  height: 20%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 2rem;
+  font-weight: bold;
+
+}
+
+.skills-list .list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  font-size: 1.5rem;
+  color: var(--black);
+
+  width: 100%;
+  height: 80%;
+}
+
+.skills-list li {
+  list-style: none;
+  font-size: 1.8rem;
+  font-weight: bold;
+}
+
+.projects {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 1200px;
+  margin: 0 auto;
+  height: 100vh;
+}
+
+.projects_cotainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.projects_title {
+  font-size: 5rem;
+  color: var(--black);
+}
+
+.projects_description {
+  font-size: 1.5rem;
+  color: var(--black);
+  max-width: 800px;
+}
+
+.projects-list {
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+  grid-column-gap: 15px;
+  grid-row-gap: 15px;
+  width: 100%;
+}
+
+.project_card {
+  background-color: var(--blanco);
+  border: 1px solid var(--black);
+  border-radius: 10px;
+  padding: 20px;
+  text-align: center;
+  transition: transform 0.3s ease;
+  width: 30%;
+  height: 200px;
+}
 
